--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="static/css/main.css">
     <title></title>
-    <link rel="stylesheet" href="/templates/static/css/main.css" />
+    
   </head>
   <body>
     <!-- This is a header section -->
