--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="static/css/main.css">
+    <link rel="stylesheet" href="static/css/main.css" />
     <title></title>
-    
   </head>
   <body>
     <!-- This is a header section -->
@@ -40,27 +39,11 @@
       <h1 class="header1">About Me</h1>
       <!-- Add additional text or elements as needed -->
     </div>
-    <div class="info_AboutMe">
-      <div class="imgAboutMe"><img src="static/images/mypic.jpg" alt=""></div>
-        <div class="contentAboutMe">
-                <p>
-                Hello, My name is Kanishk and I'm from Meerut located in West Uttar
-                Pradesh. <br /><br />
-                I am a dedicated student of IIT Madras pursuing B.S in Data Science
-                and Application, Where I learnt concept of Statistics, DBMS, ML, App
-                Dev, Apart from This I have completed B.Sc in Physical Science from
-                IIMT University Meerut where I study the essence of applied
-                Mathematics.<br /><br />
-                I have a keen interest in the field of Data Science, ML, AI, Deep
-                learning and related technology. I'm presently learning and working on
-                skills required to expertise in these. <br /><br />
-                My hobbies are listening music, travelling, reading Newspaper.
-                I am a firm beliver of passion and politeness.
-                </p>
-        </div>
-    </div>
-
 
     <!-- This is main skills section -->
+    <div class="main-info">
+      <img src="static/images/mypic.jpg" alt="Profile picture">
+      <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore accusantium sit, dolores, vitae, esse consectetur est quasi quas nesciunt tempore non natus! Corporis magnam beatae modi! Pariatur rem nesciunt dolorem.</div>
+    </div>
   </body>
 </html>
