--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       position: relative;
     }
     .profile-photo {
-      width: 125px;
-      height: 125px;
+      width: 175px;
+      height: 175px;
       border-radius: 50%;
       border: 4px solid var(--accent);
       object-fit: cover;
@@ -52,6 +52,25 @@
     /* Extended Info Columns */
     .ext-grid { display: flex; gap: 18px; flex-wrap:wrap;}
     .ext-card { background: var(--card-bg); border-radius: 10px; box-shadow: var(--shadow); padding: 16px; flex: 1 1 190px; min-width:190px;}
+    /* Resume Button */
+    .resume-btn {
+      background: var(--accent);
+      color: #fff;
+      font-size: 1.13em;
+      padding: 12px 28px;
+      border: none;
+      border-radius: 7px;
+      font-weight: 700;
+      cursor: pointer;
+      box-shadow: 0 2px 8px rgba(60,60,100,0.09);
+      transition: background 0.2s;
+      margin-top: 10px;
+      margin-bottom: 8px;
+      text-decoration: none;
+      display: inline-block;
+    }
+    .resume-btn:hover,
+    .resume-btn:focus { background: var(--primary); color: #fff;}
     /* Contact & Footer */
     form input, form textarea { width: 100%; padding: 9px; margin:4px 0 18px; border: 1px solid #ccc; border-radius:7px; font-size:1em; background:#f6f6f6; resize:vertical;}
     form input[type=submit] { background: var(--primary); color: #fff; font-weight:700; border: none; cursor:pointer;}
@@ -68,8 +87,8 @@
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
-    <img src="image.jpg" class="profile-photo" alt="Your Name Photo">
+    <h1>KANISHK KUMAR</h1>
+    <img src="120326132.png" class="profile-photo" alt="Your Name Photo">
     <p>Data Science Enthusiast · Programmer · Machine Learning Explorer</p>
     <nav>
       <a href="#about">About</a>
@@ -78,6 +97,7 @@
       <a href="#certifications">Certifications</a>
       <a href="#projects">Projects</a>
       <a href="#magazine">Magazine</a>
+      <a href="#resume">Resume</a>
       <a href="#extended">More Info</a>
       <a href="#education">Education</a>
       <a href="#contact">Contact</a>
@@ -140,6 +160,13 @@
         <div class="mag-card"><h3>Algorithm Weekly</h3><p>Competitive coding insights and LeetCode progress.</p><a href="#" target="_blank">Read More</a></div>
       </div>
     </section>
+    <section id="resume">
+      <h2>Resume</h2>
+      <div class="card" style="text-align:center;">
+        <a href="resume.pdf" download class="resume-btn">Download Resume</a>
+        <p style="margin-top:10px;">View or download my latest CV/Resume as PDF.</p>
+      </div>
+    </section>
     <section id="extended">
       <h2>More Info</h2>
       <div class="ext-grid">
@@ -182,7 +209,7 @@
     </section>
     <section id="contact">
       <h2>Contact</h2>
-      <form action="mailto:your.email@gmail.com" method="POST" enctype="text/plain">
+      <form action="https://formspree.io/f/mYOURCODE" method="POST">
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
         <textarea name="message" rows="4" placeholder="Your Message"></textarea>
@@ -191,7 +218,7 @@
     </section>
   </div>
   <footer>
-    &copy; 2025 Your Name. Made with 💡 for Data Science.
+    &copy; 2025 KANISHK KUMAR. Made with 💡 for Data Science.
   </footer>
 </body>
 </html>
